--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.6.3",
     "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
+    "socket.io-client": "^4.8.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
