--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /client/node_modules/
 /client/build/
 /client/dist/
-/server/node_modules/
+/node_modules/
+.env
+.DS_Store
+serviceAccountKey.json
+firebase.ts
