--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-typescript": "^7.27.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "axios": "^1.10.0",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
