--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2017",                                  
-    "module": "commonjs",                                
-    "moduleResolution": "Node",                     
-    "sourceMap": true,                               
-    "outDir": "./dist",                              
-    "esModuleInterop": true,                         
-    "strict": true,                                  
-    "skipLibCheck": true                            
+    "jsx": "react",
+    "target": "ES2017",
+    "module": "commonjs",
+    "moduleResolution": "Node",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true
   }
 }
